# UQPack

./: .gitignore  Makefile  README.md  run_samples.sh
cpp/: CMakeLists.txt  build_wasm.sh  main.cpp  wasm.cpp
cpp/include/: base.hpp  common.hpp  decode.hpp  encode.hpp  lz4.h  siphash.hpp
cpp/src/: common.cpp  decode.cpp  encode.cpp
js/: index.js  package-lock.json  package.json
